--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Spring Maven 프로젝트 배포 연습!!</h1>
 <h3>son branch merge</h3>
+<h3>main branch merge to lee</h3>
 <h1>수요일!!!</h1>
 <img src="./16.jpg" width="300" border="5">
 <img src="./8.jpg" width="300" border="5">
